2014-10-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-secinfo-top-visualization): Show
	time line chart on all SecInfo list pages.
	(dashboard [secinfo]): Add time line charts for other SecInfo types.

2014-10-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_line_chart.js (generate): Position second
	legend element dynamically to ensure it does not overlap the first.

2014-10-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_line_chart.js (time_line): Skip records with
	non-numeric time values.

2014-10-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (gsa:field-name): New function. Replaces
	"created" with "creation time", "modified" with "modification time"
	and replaces underscores with spaces for other field names.

	* src/html/classic/graphics.xsl (js-aggregate-chart): Apply new
	gsa:field-name function to column names in selector_label and
	title_generator.

2014-10-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (init-d3charts): Get token from params
	instead of token element to keep special "guest" token.

	* src/html/classic/omp.xsl (get_aggregate): Set auto_load param of
	chart to 0 to avoid unnecessary request.

2014-10-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_graphics_base.js
	(data_severity_level_counts): Sort levels in descending order by
	default and add parameter to sort in ascending order.

2014-10-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (save_target_omp): Remove redundant null check.

2014-10-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Remove stray colon.

2014-10-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (html-edit-target-form): Use the port list's
	name from the port_list element.
